// Copyright 2020 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.measurement.internal.kingdom;

import "src/main/proto/wfa/measurement/internal/kingdom/report_config_details.proto";

option java_package = "org.wfanet.measurement.internal.kingdom";
option java_multiple_files = true;

// Proto representation of the internal ReportConfig entity type.
//
// TODO(world-federation-of-advertisers/cross-media-measurement#52): Delete once
// Measurement is being used instead of Report.
message ReportConfig {
  fixed64 external_advertiser_id = 1;
  fixed64 external_report_config_id = 2;

  int64 num_requisitions = 3;
  ReportConfigState state = 4;

  ReportConfigDetails report_config_details = 5;
  string report_config_details_json = 6;

  enum ReportConfigState {
    REPORT_CONFIG_STATE_UNKNOWN = 0;
    ACTIVE = 1;  // Enabled
    // TODO: add more states or remove if states don't make sense for report.
  }
}
